<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/pop_up_shape"
        android:paddingTop="50dp"
        android:paddingHorizontal="20dp"
        android:layout_margin="30dp"
        android:gravity="center">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:src="@drawable/accept"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sent"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/end_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/end_text2"/>

        <Button
            android:id="@+id/main_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen"
            android:textAllCaps="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:background="@drawable/btn_selector"/>

    </LinearLayout>


</RelativeLayout>